examples/cpp/failing/lack_of_conflict/Base.c
#include<stdio.h>

int main(int argc, char** argv) {
    if (argc < 2) {
        printf("too few arguments\n");
        exit(1);
    }
}
